Fixed blackout z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ main {
     opacity: 0;
     display: none;
     transition: all 1s;
+    z-index: 99;
 }
 
 #preloadPics {
